# storege_system

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
config/: default.toml  security_rules.json
crates/storage-api/: Cargo.toml
crates/storage-api/src/: dto.rs  error.rs  lib.rs  middleware.rs  openapi.rs  router.rs  state.rs
crates/storage-api/src/handlers/: backup.rs  mod.rs
crates/storage-auth/: Cargo.toml
crates/storage-auth/src/: claims.rs  firebase.rs  lib.rs  path.rs  rules.rs  signed_url.rs
crates/storage-core/: Cargo.toml
crates/storage-core/src/: backend.rs  backup.rs  bucket.rs  error.rs  lib.rs  metadata.rs  object.rs  store.rs  upload.rs
crates/storage-server/: Cargo.toml
crates/storage-server/src/: config.rs  main.rs
docs/: INTEGRATION.md
